tcw3/designer/tests/bad/prop_uninitable.tcwdl
pub comp crate::Comp1 {
    const wm: tcw3_pal::Wm { pub set; }

    prop field: u32 {}
    //~^ ERROR Props must have a setter
}
